[metadata]
name = recs-searcher
version = 0.0.1
author = Max
author_email = kobelevmaxim48@gmail.com
description = Corrections of registry errors and database search.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sheriff1max/recs-searcher
project_urls =
    Bug Tracker = https://github.com/sheriff1max/recs-searcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = recs-searcher
packages = find:
python_requires = >=3.10

[options.packages.find]
where = recs-searcher
